HelloUltraviolet/Fixtures/RejectedSource/Parallelism/ParallelDomainParameter/Expected.uv
//! Expected diagnostic metadata for the ParallelDomainParameter rejected-source specimen.

expectedDiagnostic("E-CON-0103", "rule.20.Parallel-Domain-Param-Err")
